[package]
name = "rglauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzy-matcher = "0.3.7"
#gio = "0.17.10"

lazy_static = "1.4.0"
locale-types = "0.4.0"
regex = "1.6.0"
serde_json = "1.0.79"
flume = "0.10.14"
async-channel = "1.8.0"
tracing = "0.1.37"
async-broadcast = "0.5.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
#glib = "0.17.10"
rusqlite = { version = "0.29.0", features = ["bundled"] }
futures = { version = "0.3.25"}
sourceview5 = "0.7.1"
gtk = { version = "0.7", package = "gtk4", futures = ["v4_10"]}
gio = "0.18.1"
glib = "0.18.1"


[profile.release]
debug = true
strip = "debuginfo"

