[workspace]

members = ["crates/rglauncher-core", "crates/rglauncher-gtk", "vendor/mdict"]

resolver = "2"

[workspace.dependencies]
chin-tools = { path = "../chin-tools/crates/chin-tools" }
chin-wayland-utils = { path = "../chin-tools/crates/chin-wayland-utils" }

[profile.release]
lto = true
opt-level = 3
