[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzy-matcher = "0.3.7"
lazy_static = "1.4.0"
regex = "1.6.0"
serde_json = "1.0.79"
flume = "0.10.14"
tracing = "0.1.37"

tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.2"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
chrono = "0.4.24"
futures = { version = "0.3.25"}

md5 = "*"

# for the Calc Plugin
meval = "0.2.0"

# for the Dict Plugin
bytes = "1.4.0"
miniz_oxide = "0.7.1"
encoding_rs = '0.8'
ripemd128 = '0.1'
anyhow = "1.0.75"
adler = "1.0.2"
minilzo = "0.2.0"
patricia_tree = "0.6.3"
html-escape = "0.2.13"

# for the App plugin
freedesktop-desktop-entry = "*"
fork = "*"

# for the Clip plugin
arboard = {version = "3.3.0", default-features = false, features = ["wayland-data-control"]}
