[package]
name = "clipmonitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3", default-features = false, features = [
    "image-data",
    "wayland-data-control",
] }
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
