[package]
name = "clipmonitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3", default-features = false, features = [
    "image-data",
    "wayland-data-control",
] }
rusqlite = { version = "*", features = ["bundled", "chrono"] }
tokio = "*"
wayland-client = "0.31.1"
wayland-protocols = "0.31.0"

