[package]
name = "rglclip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
md5 = "0.7.0"
rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
rglcore = { path = "../rglauncher-core" }

wayland-clipboard-listener = { version = "0.2.5", optional = true }
x11-clipboard = { version = "0.9.2", optional = true }


[features]
default = []
wayland = ["wayland-clipboard-listener"]
x11 = ["x11-clipboard"]
