[package]
name = "rglcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzy-matcher = "0.3.7"
lazy_static = "1.4.0"
regex = "1.6.0"
flume = "0.11.0"
tracing = "0.1.37"

tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.3.0"
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4.31", features = ["serde"] }

md5 = "0.7.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
toml = "0.8.12"

anyhow = "1.0.82"

# for the App plugin
freedesktop-desktop-entry = "0.5.0"
libc = "0.2.153"

# for the Calc Plugin
meval = { version = "0.2.0", optional = true }

# for the Clip plugin
arboard = { version = "3.3.0", default-features = false, features = [
    "wayland-data-control",
], optional = true }

chin-tools = { workspace = true }
arc-swap = "*"

mdict = { path = "../../vendor/mdict", optional = true }
futures = { version = "0.3.31", features = ["thread-pool"], default-features = false}

[features]
default = ["wmwin", "calc"]
wmwin = []
calc = ["meval"]
fmdict = ["mdict"]
clip = ["arboard"]
