[package]
name = "rglauncher-gpui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
flume = "0.11.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = "0.4.24"
lazy_static = "1.4.0"
futures = "0.3.28"

rglcore = { path = "../rglauncher-core", optional = true }
tracing = "0.1.40"
anyhow = "1.0.75"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.108", default_features = false, optional = true }
async-broadcast = { workspace = true }

wry = { version = "*", optional = true }
gpui = { git = "https://github.com/zed-industries/zed" }

[features]
default = ["rglcore"]
mdict = ["wry", "rglcore?/mdict"]
calc = ["rglcore?/calc"]
hyprwin = ["rglcore?/hyprwin"]
clip = ["rglcore?/clip"]
