[package]
name = "rglauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4"}
gio = "0.18"
glib = "0.18"
webkit6 = {version = "0.2", all-features = false}

fragile = "2.0.0"
clap = { version = "4.4.10", features = ["derive"] }
flume = "0.10.14"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = "0.4.24"
lazy_static = "1.4.0"
futures = "0.3.28"

backend = { path = "../backend" }
tracing = "0.1.40"
anyhow = "1.0.75"